Fixed overlapping issue for talks on landing and talks page

--- a/website/static/website/css/news.css
+++ b/website/static/website/css/news.css
@@ -46,8 +46,8 @@
  */
 .line-clamp {
       position: relative;
-      max-height: 2.5em; /* exactly two lines*/
-      height: 2.5em;
+      max-height: 2.6em; /* exactly two lines*/
+      height: 2.6em;
     }
 .line-clamp:after {
     position: absolute;
@@ -67,8 +67,8 @@
         display: -webkit-box;
         -webkit-line-clamp: 2;
         -webkit-box-orient: vertical;  
-        max-height:2.5em; /* I needed this to get it to work */
-        height: 2.5em;
+        max-height:2.6em; /* I needed this to get it to work */
+        height: 2.6em;
     }
     .line-clamp:after {
         display: none;
